// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Votes should render correctly with additional classname 1`] = `
<div>
  <div
    class="votes test-classname"
  />
</div>
`;

exports[`Votes should render correctly with no votes and active voting 1`] = `
<div>
  <div
    class="votes"
  >
    <button
      class="dot-button vote-button-add"
      tabindex="0"
    >
      <svg
        class="vote-button-add__icon"
      >
        icon-add.svg
      </svg>
    </button>
  </div>
</div>
`;

exports[`Votes should render correctly with no votes and disabled voting 1`] = `
<div>
  <div
    class="votes"
  />
</div>
`;

exports[`Votes should render correctly with votes and active voting 1`] = `
<div>
  <div
    class="votes"
  >
    <button
      class="dot-button vote-button-remove"
      tabindex="0"
    >
      <span
        class="vote-button-remove__folded-corner"
      />
      <span>
        1
      </span>
    </button>
    <button
      class="dot-button vote-button-add"
      tabindex="0"
    >
      <svg
        class="vote-button-add__icon"
      >
        icon-add.svg
      </svg>
    </button>
  </div>
</div>
`;

exports[`Votes should render correctly with votes and disabled voting 1`] = `
<div>
  <div
    class="votes"
  >
    <button
      class="dot-button vote-button-remove"
      disabled=""
      tabindex="0"
    >
      <span
        class="vote-button-remove__folded-corner"
      />
      <span>
        1
      </span>
    </button>
  </div>
</div>
`;
